# reverse-markov-learning

./: .gitignore  LICENSE  README.md  main.py  mixture.ipynb  pyproject.toml
