[project]
name = "reverse-markov-learning"
version = "0.1.0"
description = "Exploring Reverse Markov Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "engression-pytorch>=0.1.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
